1. Proširiti rješenje druge laboratorijske vježbe s dvije „checked“ iznimke u dijelovima koda (kod neispravnog unosa podataka, na primjer string vrijednosti umjesto brojčanih, nakon čega korisnik mora ponoviti unos). 2. Proširiti rješenje druge laboratorijske vježbe s dvije „unchecked“ iznimke i dijelovima koda (kod logičkih pogrešaka gdje to nije primjereno, na primjer kod unosa negativnih iznosa gdje mogu biti samo pozitivni ili kod isteka maksimalnog vremena čekanja na korisnički unos podataka). 3. Konfigurirati Logback biblioteku koja će omogućavati kreiranje „log“ datoteka i zapisivati („logirati“) najvažnije događaje u aplikacije sa svih pet razina logiranja (TRACE, DEBUG, INFO, WARN i ERROR). 4. Za svaku metodu i klasu generiranje Javadoc dokumentacije.

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,15 @@
     <artifactId>SustavZaBolnicu</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.12</version>
+        </dependency>
+    </dependencies>
+
+
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
