1. Proširiti rješenje pete laboratorijske vježbe na način da se umjesto unošenja podataka o strane korisnika podaci učitavaju iz JSON datoteka. Potrebno je kreirati zasebne JSON datoteke za svaki entitet u aplikaciji. Svaki novokreirani podatak također je potrebno spremiti u JSON datoteku. 2. Proširiti rješenje pete laboratorijske vježbe na način da se svi učitani podaci iz JSON datoteke serijaliziraju u jednu „backup.bin“ datoteku koja će imati funkciju pričuvne kopije na zahtjev korisnika. Nakon toga potrebno je omogućiti korisniku da dohvati te podatke i „pregazi“ trenutne podatke u aplikaciji s podacima iz pričuvne kopije. 3. Proširiti rješenje pete laboratorijske vježbe na način da se podaci koje unosi korisnik pri odabiru opcija koje nudi aplikacija (na primjer, odabir opcije iz izbornika, kreiranje pričuvne kopije, dohvaćanje podataka iz pričuvne kopije i slično) spreme u XML formatu kao svojevrsni „log“. Na zahtjev korisnika potrebno je ispisati podatke spremljene u XML formatu (samo bez „tagova“ za formatiranje XML-a).

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -31,6 +31,18 @@
             <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- JSON processing -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+        <!-- XML processing (already in JDK but explicitly declaring) -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -48,6 +60,7 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.10.0.2594</version>
             </plugin>
+            <!-- JaCoCo disabled due to Java 25 incompatibility - waiting for JaCoCo update -->
         </plugins>
     </build>
 </project>
