--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=1.0
 
 # Source code location
 sonar.sources=src/main/java
-onar.tests=src/test/java
+sonar.tests=src/test/java
 
 # Java version
 sonar.java.source=25
